fix: cannot see text in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ input, a, button {
 
 .input-container { @apply flex flex-col w-full gap-4 justify-center items-center max-w-2xl; }
 
-.input-box { @apply w-full rounded-lg border-2 border-blue-400 focus:ring focus:ring-blue-500 ring-offset-2 outline-none p-3 duration-200 shadow-lg; }
+.input-box { @apply w-full rounded-lg dark:text-black border-2 border-blue-400 focus:ring focus:ring-blue-500 ring-offset-2 outline-none p-3 duration-200 shadow-lg; }
 
 .buttons-container { @apply grid md:grid-rows-3 md:grid-flow-col md:grid-cols-none grid-cols-3 grid-flow-row md:gap-4 gap-2 w-full max-w-2xl; }
 
